2008-09-17  Wakaba  <wakaba@suika.fam.cx>

	* readme.en.html: Add link to the CSS extension document.

2008-09-17  Wakaba  <wakaba@suika.fam.cx>

	* readme.en.html: Add missing links to more existing modules.

2008-09-17  Wakaba  <wakaba@suika.fam.cx>

	* readme.en.html: Document structure reconsidered.

2008-09-17  Wakaba  <wakaba@suika.fam.cx>

	* readme.en.html: Missing links to existing modules are added.
	More links to demos and application are added.  Link to the tarball
	of the CVS trunk is added.

2008-09-15  Wakaba  <wakaba@suika.fam.cx>

	* readme.en.html: Link to handles.en.html.

2008-07-19  Wakaba  <wakaba@suika.fam.cx>

	* readme.en.html: Link to Whatpm::WebIDL module.

2007-11-23  Wakaba  <wakaba@suika.fam.cx>

	* readme.en.html: Link to user data names documentation
	is added.

2007-11-23  Wakaba  <wakaba@suika.fam.cx>

	* readme.en.html: Whatpm::ContentChecker now depends
	on Message::Charset::Info.

2007-11-19  Wakaba  <wakaba@suika.fam.cx>

	* readme.en.html: Link to |Whatpm::Charset::UniversalCharDet|.

2007-11-11  Wakaba  <wakaba@suika.fam.cx>

	* readme.en.html: Link to |Whatpm::HTML::Serializer|.

2007-11-04  Wakaba  <wakaba@suika.fam.cx>

	* readme.en.html: Link to |Whatpm::CacheManifest|.

2007-10-17  Wakaba  <wakaba@suika.fam.cx>

	* readme.en.html: Link to Selectors object documentation is added.

2007-10-07  Wakaba  <wakaba@suika.fam.cx>

	* readme.en.html: Link to the spec for manakai's extension Selectors
	pseudo-classes is added.

2007-09-09  Wakaba  <wakaba@suika.fam.cx>

	* readme.en.html: Links to CSS tokenizer module & demo
	are added.

2007-07-29  Wakaba  <wakaba@suika.fam.cx>

	* readme.en.html: Dependency section is added.

2007-05-27  Wakaba  <wakaba@suika.fam.cx>

	* readme.en.html: Link to new modules are added.

2007-05-20  Wakaba  <wakaba@suika.fam.cx>

	* readme.en.html: Updated.

2007-05-02  Wakaba  <wakaba@suika.fam.cx>

	* readme.en.html: TODO section is added.

2007-05-01  Wakaba  <wakaba@suika.fam.cx>
