@@ -1,3 +1,7 @@
+2008-10-05  Wakaba  <wakaba@suika.fam.cx>
+
+	* UniversalCharDet.pod: Typo fixed.
+
 2008-09-20  Wakaba  <wakaba@suika.fam.cx>
 
 	* DecodeHandleOld.pm: DecodeHandle.pm revision 1.6 reintroduced
