@@ -1,3 +1,9 @@
+2008-10-05  Wakaba  <wakaba@suika.fam.cx>
+
+	* readme.en.html: Missing link to Whatpm::RDFXML module is added.
+	Typo fixed.  Noted that Media Query Level 3 is not supported yet.
+	Linked to WebHACC supported standards documentation.
+
 2008-09-17  Wakaba  <wakaba@suika.fam.cx>
 
 	* readme.en.html: Add link to the CSS extension document.
